Changes to Moves;
Hyperbeam -- Recharge instantly
Low Kick -- Based on current health
Trasnform -- 100% carbon clone