@@ -1,4 +1,5 @@
 Changes to Moves;
 Hyperbeam -- Recharge instantly
 Low Kick -- Based on current health
-Trasnform -- 100% carbon clone
+triple kick -- constant 20 power
+flail -- equation changed
